--- a/proiect/src/main/resources/application.properties
+++ b/proiect/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=proiect
+
+spring.datasource.url=jdbc:h2:file:./music_db
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
